// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render List correctly with no items 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "static",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "static",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "static",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ListContextProvider>
      <Provider
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
      >
        <List>
          <section
            className="list"
          >
            <div
              className="container"
            >
              <ListFilters>
                <div
                  className="filters"
                >
                  <input
                    className="filters__item"
                    onChange={[Function]}
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                </div>
              </ListFilters>
              <ListTable
                filteredItems={Array []}
              >
                <div
                  className="list__task-table"
                >
                  <ListHeader>
                    <div
                      className="list__header"
                    >
                      <div
                        className="list__header-item"
                      >
                        <div
                          className="list__name"
                          onClick={[Function]}
                        >
                          <span>
                            Name
                          </span>
                          <i
                            className="fas fa-sort-down"
                          />
                        </div>
                        <p
                          className="list__status"
                        >
                          Status
                        </p>
                        <p
                          className="list__dropdown"
                        >
                          Options
                        </p>
                      </div>
                    </div>
                  </ListHeader>
                  <ListBody
                    currentItems={Array []}
                  >
                    <div
                      className="list__body"
                    />
                  </ListBody>
                </div>
              </ListTable>
              <Pagination
                pageNeighbours={1}
                totalItems={0}
              >
                <div
                  className="pagination"
                >
                  <PaginationFilter>
                    <div
                      className="pagination__limit"
                    >
                      <select
                        className="filters__item"
                        onChange={[Function]}
                        value={5}
                      >
                        <option
                          value="2"
                        >
                          2 items
                        </option>
                        <option
                          value="5"
                        >
                          5 items
                        </option>
                        <option
                          value="10"
                        >
                          10 items
                        </option>
                        <option
                          value="20"
                        >
                          20 items
                        </option>
                      </select>
                    </div>
                  </PaginationFilter>
                  <PaginationPages
                    pageNeighbours={1}
                    pages={Array []}
                    totalPages={0}
                  >
                    <nav
                      className="pagination__pages"
                    >
                      <ul />
                    </nav>
                  </PaginationPages>
                </div>
              </Pagination>
            </div>
          </section>
        </List>
      </Provider>
    </ListContextProvider>
  </Router>
</MemoryRouter>
`;

exports[`Should render List correctly with tasks 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "static",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "static",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "static",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <ListContextProvider>
      <Provider
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
      >
        <List>
          <section
            className="list"
          >
            <div
              className="container"
            >
              <ListFilters>
                <div
                  className="filters"
                >
                  <input
                    className="filters__item"
                    onChange={[Function]}
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                </div>
              </ListFilters>
              <ListTable
                filteredItems={
                  Array [
                    Object {
                      "color": "green",
                      "description": "This is my task fixure 1",
                      "endDate": 1616108400000,
                      "id": "t1",
                      "name": "Task 1",
                      "proyectId": "p1",
                      "startDate": 1615762800000,
                      "status": "todo",
                    },
                    Object {
                      "color": "brown",
                      "description": "This is my task fixure 2",
                      "endDate": 1616540400000,
                      "id": "t2",
                      "name": "Task 2",
                      "proyectId": "p1",
                      "startDate": 1616194800000,
                      "status": "doing",
                    },
                    Object {
                      "color": "purple",
                      "description": "This is my task fixure 3",
                      "endDate": 1616968800000,
                      "id": "t3",
                      "name": "Task 3",
                      "proyectId": "p3",
                      "startDate": 1616626800000,
                      "status": "done",
                    },
                  ]
                }
              >
                <div
                  className="list__task-table"
                >
                  <ListHeader>
                    <div
                      className="list__header"
                    >
                      <div
                        className="list__header-item"
                      >
                        <div
                          className="list__name"
                          onClick={[Function]}
                        >
                          <span>
                            Name
                          </span>
                          <i
                            className="fas fa-sort-down"
                          />
                        </div>
                        <p
                          className="list__status"
                        >
                          Status
                        </p>
                        <p
                          className="list__dropdown"
                        >
                          Options
                        </p>
                      </div>
                    </div>
                  </ListHeader>
                  <ListBody
                    currentItems={
                      Array [
                        Object {
                          "color": "green",
                          "description": "This is my task fixure 1",
                          "endDate": 1616108400000,
                          "id": "t1",
                          "name": "Task 1",
                          "proyectId": "p1",
                          "startDate": 1615762800000,
                          "status": "todo",
                        },
                        Object {
                          "color": "brown",
                          "description": "This is my task fixure 2",
                          "endDate": 1616540400000,
                          "id": "t2",
                          "name": "Task 2",
                          "proyectId": "p1",
                          "startDate": 1616194800000,
                          "status": "doing",
                        },
                        Object {
                          "color": "purple",
                          "description": "This is my task fixure 3",
                          "endDate": 1616968800000,
                          "id": "t3",
                          "name": "Task 3",
                          "proyectId": "p3",
                          "startDate": 1616626800000,
                          "status": "done",
                        },
                      ]
                    }
                  >
                    <div
                      className="list__body"
                    >
                      <ListItem
                        color="green"
                        description="This is my task fixure 1"
                        endDate={1616108400000}
                        id="t1"
                        key="t1"
                        name="Task 1"
                        proyectId="p1"
                        startDate={1615762800000}
                        status="todo"
                      >
                        <div
                          className="list__body-item"
                          key="t1"
                        >
                          <Link
                            className="list__name"
                            data-id="t1"
                            to="/task/t1"
                          >
                            <LinkAnchor
                              className="list__name"
                              data-id="t1"
                              href="/task/t1"
                              navigate={[Function]}
                            >
                              <a
                                className="list__name"
                                data-id="t1"
                                href="/task/t1"
                                onClick={[Function]}
                              >
                                Task 1
                              </a>
                            </LinkAnchor>
                          </Link>
                          <p
                            className="list__status list__status--todo"
                          >
                            todo
                          </p>
                          <ListDropdown
                            id="t1"
                          >
                            <div
                              className="list__dropdown"
                            >
                              <ListDropdownButton
                                onButtonClicked={[Function]}
                              >
                                <div
                                  className="list__dropdown-button"
                                  onClick={[Function]}
                                >
                                  <i
                                    className="fas fa-sliders-h"
                                  />
                                  <i
                                    className="fas fa-sort-down"
                                  />
                                </div>
                              </ListDropdownButton>
                              <ListDropdownContent
                                id="t1"
                                onListClicked={[Function]}
                                open={false}
                              />
                            </div>
                          </ListDropdown>
                        </div>
                      </ListItem>
                      <ListItem
                        color="brown"
                        description="This is my task fixure 2"
                        endDate={1616540400000}
                        id="t2"
                        key="t2"
                        name="Task 2"
                        proyectId="p1"
                        startDate={1616194800000}
                        status="doing"
                      >
                        <div
                          className="list__body-item"
                          key="t2"
                        >
                          <Link
                            className="list__name"
                            data-id="t2"
                            to="/task/t2"
                          >
                            <LinkAnchor
                              className="list__name"
                              data-id="t2"
                              href="/task/t2"
                              navigate={[Function]}
                            >
                              <a
                                className="list__name"
                                data-id="t2"
                                href="/task/t2"
                                onClick={[Function]}
                              >
                                Task 2
                              </a>
                            </LinkAnchor>
                          </Link>
                          <p
                            className="list__status list__status--doing"
                          >
                            doing
                          </p>
                          <ListDropdown
                            id="t2"
                          >
                            <div
                              className="list__dropdown"
                            >
                              <ListDropdownButton
                                onButtonClicked={[Function]}
                              >
                                <div
                                  className="list__dropdown-button"
                                  onClick={[Function]}
                                >
                                  <i
                                    className="fas fa-sliders-h"
                                  />
                                  <i
                                    className="fas fa-sort-down"
                                  />
                                </div>
                              </ListDropdownButton>
                              <ListDropdownContent
                                id="t2"
                                onListClicked={[Function]}
                                open={false}
                              />
                            </div>
                          </ListDropdown>
                        </div>
                      </ListItem>
                      <ListItem
                        color="purple"
                        description="This is my task fixure 3"
                        endDate={1616968800000}
                        id="t3"
                        key="t3"
                        name="Task 3"
                        proyectId="p3"
                        startDate={1616626800000}
                        status="done"
                      >
                        <div
                          className="list__body-item"
                          key="t3"
                        >
                          <Link
                            className="list__name"
                            data-id="t3"
                            to="/task/t3"
                          >
                            <LinkAnchor
                              className="list__name"
                              data-id="t3"
                              href="/task/t3"
                              navigate={[Function]}
                            >
                              <a
                                className="list__name"
                                data-id="t3"
                                href="/task/t3"
                                onClick={[Function]}
                              >
                                Task 3
                              </a>
                            </LinkAnchor>
                          </Link>
                          <p
                            className="list__status list__status--done"
                          >
                            done
                          </p>
                          <ListDropdown
                            id="t3"
                          >
                            <div
                              className="list__dropdown"
                            >
                              <ListDropdownButton
                                onButtonClicked={[Function]}
                              >
                                <div
                                  className="list__dropdown-button"
                                  onClick={[Function]}
                                >
                                  <i
                                    className="fas fa-sliders-h"
                                  />
                                  <i
                                    className="fas fa-sort-down"
                                  />
                                </div>
                              </ListDropdownButton>
                              <ListDropdownContent
                                id="t3"
                                onListClicked={[Function]}
                                open={false}
                              />
                            </div>
                          </ListDropdown>
                        </div>
                      </ListItem>
                    </div>
                  </ListBody>
                </div>
              </ListTable>
              <Pagination
                pageNeighbours={1}
                totalItems={3}
              >
                <div
                  className="pagination"
                >
                  <PaginationFilter>
                    <div
                      className="pagination__limit"
                    >
                      <select
                        className="filters__item"
                        onChange={[Function]}
                        value={5}
                      >
                        <option
                          value="2"
                        >
                          2 items
                        </option>
                        <option
                          value="5"
                        >
                          5 items
                        </option>
                        <option
                          value="10"
                        >
                          10 items
                        </option>
                        <option
                          value="20"
                        >
                          20 items
                        </option>
                      </select>
                    </div>
                  </PaginationFilter>
                  <PaginationPages
                    pageNeighbours={1}
                    pages={
                      Array [
                        1,
                      ]
                    }
                    totalPages={1}
                  >
                    <nav
                      className="pagination__pages"
                    >
                      <ul>
                        <PaginationPageItem
                          key="0"
                          page={1}
                          pageNeighbours={1}
                          totalPages={1}
                        >
                          <li>
                            <a
                              className="pagination__active-page"
                              onClick={[Function]}
                            >
                              1
                            </a>
                          </li>
                        </PaginationPageItem>
                      </ul>
                    </nav>
                  </PaginationPages>
                </div>
              </Pagination>
            </div>
          </section>
        </List>
      </Provider>
    </ListContextProvider>
  </Router>
</MemoryRouter>
`;
